--- a/packages/telescope-theme-stewardsof/lib/client/templates/custom_post_title.html
+++ b/packages/telescope-theme-stewardsof/lib/client/templates/custom_post_title.html
@@ -1,4 +1,4 @@
 <template name="custom_post_title">
-  <a href="{{postLink}}" class="post-title hey" target="{{postTarget}}">{{title}}</a>
+  <a href="{{this.getLink}}" class="post-title" target="{{this.getLinkTarget}}">{{title}}</a>
   {{ > post_admin }}
 </template>
