--- a/packages/telescope-theme-stewardsof/lib/client/templates/nav/custom_logo.html
+++ b/packages/telescope-theme-stewardsof/lib/client/templates/nav/custom_logo.html
@@ -2,42 +2,44 @@
   {{#if logoUrl}}
     <a class="brand-logo" href="/">
       <!-- <img src="{{logoUrl}}" alt="{{getSetting "title" "Telescope"}}"/> -->
-<svg width="367px" height="53px" viewBox="0 0 367 53" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-                <!-- Generator: Sketch 3.2 (9961) - http://www.bohemiancoding.com/sketch -->
-                <title>Stewardsof  + New Changemakers eve + insertion mark 2 + Oval 1513 + Oval 1507 + Path 2333 + Path 2339 + Path 2334 + Path 2336</title>
-                <desc>Created with Sketch.</desc>
-                <defs>
-                    <circle id="path-1" cx="26.5" cy="30.5" r="26.5"></circle>
-                </defs>
-                <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-                    <g id="CORE-EXPERIENCE" sketch:type="MSArtboardGroup" transform="translate(-273.000000, -22.000000)">
-                        <g id="Stewardsof--+-New-Changemakers-eve-+-insertion-mark-2-+-Oval-1513-+-Oval-1507-+-Path-2333-+-Path-2339-+-Path-2334-+-Path-2336" sketch:type="MSLayerGroup" transform="translate(273.000000, 18.000000)">
-                            <g id="Stewardsof--+-New-Changemakers-eve-+-insertion-mark-2" transform="translate(78.000000, 0.000000)" font-family="Roboto" fill="#FFFFFF" sketch:type="MSTextLayer">
-                                <text id="Stewardsof-" class="hide-on-med-and-down" font-size="22" font-weight="bold" letter-spacing="3.29999852">
-                                    <tspan x="0" y="23">Stewards</tspan>
-                                    <tspan x="119.148035" y="23" font-weight="260" style="font-weight:normal;">of </tspan>
-                                </text>
-                                <text id="New-changemakers,-ev" class="hide-on-med-and-down" font-size="18" font-weight="normal" sketch:alignment="middle" letter-spacing="1.49062502">
-                                    <tspan x="1.6043942" y="48" style="font-weight:normal;">New changemakers, every day.</tspan>
-                                </text>
-                            </g>
-                            <mask id="mask-2" sketch:name="Oval 1513" fill="white">
-                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#path-1"></use>
-                            </mask>
-                            <use id="Oval-1513" fill="#FFFFFF" sketch:type="MSShapeGroup" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#path-1"></use>
-                            <g id="Oval-1507-+-Path-2333-+-Path-2339-+-Path-2334-+-Path-2336" mask="url(#mask-2)">
-                                <g transform="translate(38.685006, 37.221064) scale(-1, 1) rotate(-23.000000) translate(-38.685006, -37.221064) translate(11.185006, 12.221064)">
-                                    <path d="M41.3279474,30.2735876 C39.4062274,30.6460195 37.8972399,31.80657 35.6374291,33.7575104 C33.3776183,35.7084508 27.9967764,39.2687746 27.9967764,39.2687746 C27.9967764,39.2687746 34.153725,40.5434529 37.1519207,41.5249906 C40.1501164,42.5065282 42.1932522,42.8174527 43.7161842,42.5223065 C47.6681365,41.7564129 49.2039935,37.9987355 48.6704265,35.2621928 C48.1368595,32.5256502 45.3416489,29.4957267 41.3279474,30.2735876 L41.3279474,30.2735876 Z" id="Path-2340" fill="#00BCD4" sketch:type="MSShapeGroup" transform="translate(38.311940, 37.140170) scale(-1, -1) rotate(24.000000) translate(-38.311940, -37.140170) "></path>
-                                    <path d="M42.0258878,17.9777106 C43.8457539,17.490079 45.2022954,16.2189063 47.2160325,14.0973558 C49.2297696,11.9758053 54.1152635,8.03444473 54.1152635,8.03444473 C54.1152635,8.03444473 48.0786272,7.071528 45.1088986,6.23342518 C42.1391701,5.39532236 40.1453142,5.1904566 38.7030997,5.57689673 C34.9606066,6.57969458 33.794987,10.5098092 34.5373464,13.2803321 C35.2797058,16.050855 38.2249182,18.9961773 42.0258878,17.9777106 Z" id="Path-2" fill="#00BCD4" sketch:type="MSShapeGroup" transform="translate(44.220335, 11.786348) scale(-1, 1) translate(-44.220335, -11.786348) "></path>
-                                    <g id="Path-2333-+-Path-2339-+-Path-2334-+-Path-2336" stroke-width="1" fill="none" sketch:type="MSLayerGroup" transform="translate(27.263464, 4.939519)">
-                                        <path d="M13.5614688,19.001626 C13.7056612,20.4205917 14.1764196,25.2894738 14.1117392,27.7703571 C14.0355036,30.694447 14.0958685,32.5525215 15.0379005,34.1841688 C17.0054271,37.5920249 21.1706642,37.5919472 23.6546471,36.157819 C26.13863,34.7236908 28.0934232,31.1204626 26.1561661,27.7650352 C25.4096209,26.4719811 23.8548899,25.206974 21.1623465,23.6996871 C18.8695313,22.4161681 14.9401908,19.6241181 13.8240437,18.8234051 C13.6798513,17.4044394 13.2090929,12.5355573 13.2737734,10.054674 C13.350009,7.13058412 13.289644,5.27250961 12.3476121,3.64086234 C10.3800854,0.233006245 6.21484832,0.233083936 3.73086544,1.66721212 C1.24688256,3.10134031 -0.707910645,6.7045685 1.2293465,10.059996 C1.97589168,11.35305 3.5306227,12.6180571 6.22316606,14.1253441 C8.51598129,15.4088631 12.4453218,18.200913 13.5614688,19.001626 Z" id="Path-2334" fill="#00BCD4" sketch:type="MSShapeGroup" transform="translate(13.692756, 18.912516) scale(-1, 1) translate(-13.692756, -18.912516) "></path>
-                                    </g>
-                                </g>
-                            </g>
+      <svg width="218px" height="53px" viewBox="0 0 218 53" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+        <!-- Generator: Sketch 3.3.2 (12043) - http://www.bohemiancoding.com/sketch -->
+        <title>Stewardsof  + Oval 1513 + Oval 1507 + Path 2333 + Path 2339 + Path 2334 + Path 2336</title>
+        <desc>Created with Sketch.</desc>
+        <defs>
+          <ellipse id="path-1" cx="26" cy="26" rx="26" ry="26"></ellipse>
+        </defs>
+        <g id="Welcome" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+          <g id="CORE-EXPERIENCE--Hover-State-Copy-3" sketch:type="MSArtboardGroup" transform="translate(-273.000000, -20.000000)">
+            <g id="Stewardsof--+-New-Changemakers-eve-+-insertion-mark-2-+-Oval-1513-+-Oval-1507-+-Path-2333-+-Path-2339-+-Path-2334-+-Path-2336" sketch:type="MSLayerGroup" transform="translate(273.750000, 19.516602)">
+              <g id="Stewardsof--+-New-Changemakers-eve-+-insertion-mark-2" transform="translate(0.000000, 0.000000)">
+                <g id="Stewardsof--+-Oval-1513-+-Oval-1507-+-Path-2333-+-Path-2339-+-Path-2334-+-Path-2336">
+                  <text id="Stewardsof-" sketch:type="MSTextLayer" font-family="Roboto" font-size="22" font-weight="bold" letter-spacing="3.29999852" fill="#FFFFFF">
+                    <tspan x="75" y="34">Stewards</tspan>
+                    <tspan x="194.148035" y="34" font-weight="260">of </tspan>
+                  </text>
+                  <g id="Oval-1513-+-Oval-1507-+-Path-2333-+-Path-2339-+-Path-2334-+-Path-2336" transform="translate(0.000000, 0.500000)">
+                    <mask id="mask-2" sketch:name="Oval 1513" fill="white">
+                      <use xlink:href="#path-1"></use>
+                    </mask>
+                    <use id="Oval-1513" fill="#FFFFFF" sketch:type="MSShapeGroup" xlink:href="#path-1"></use>
+                    <g id="Oval-1507-+-Path-2333-+-Path-2339-+-Path-2334-+-Path-2336" mask="url(#mask-2)">
+                      <g transform="translate(32.536279, 30.294098) scale(-1, 1) rotate(-23.000000) translate(-32.536279, -30.294098) translate(-0.331645, 5.765797)">
+                        <g id="Path-2333-+-Path-2339-+-Path-2334-+-Path-2336" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSLayerGroup" transform="translate(26.749059, 4.846320)">
+                          <path d="M13.305592,18.6431048 C13.4470638,20.0352976 13.90894,24.8123139 13.8454799,27.2463881 C13.7706828,30.1153065 13.8299087,31.938323   14.7541665,33.5391845 C16.68457,36.8827414 20.7712177,36.8826652 23.208333,35.475596 C25.6454483,34.0685269 27.5633586,30.5332841 25.6626535,27.2411666 C24.9301941,25.9725098 23.4047976,24.7313708 20.7630569,23.2525231 C18.5135024,21.9932215 14.6583004,19.2538517 13.5632127,18.4682465 C13.4217409,17.0760538 12.9598647,12.2990374 13.0233248,9.86496322 C13.098122,6.99604479 13.038896,5.1730283 12.1146382,3.57216683 C10.1842348,0.228609901 6.09758703,0.228686126 3.66047175,1.63575529 C1.22335647,3.04282445 -0.69455384,6.57806721 1.20615128,9.87018471 C1.9386107,11.1388415 3.46400717,12.3799805 6.10574784,13.8588282 C8.3553024,15.1181298 12.2105044,17.8574996 13.305592,18.6431048 Z" id="Path-2334" fill="#00BCD4" sketch:type="MSShapeGroup" transform="translate(13.434402, 18.555676) scale(-1, 1) translate(-13.434402, -18.555676) "></path>
                         </g>
+                        <path d="M32.1456044,41.3904158 C34.0166824,41.8234879 35.8323331,41.3854565 38.6363682,40.538617 C41.4404033,39.6917775 47.6840902,38.6479196 47.6840902,38.6479196 C47.6840902,38.6479196 42.6742394,35.0484078 40.3786251,32.9721799 C38.0830108,30.8959521 36.3758086,29.8019291 34.8930096,29.4587264 C31.0452009,28.5681281 28.1690512,31.3232645 27.5552407,33.9889782 C26.9414303,36.6546918 28.2376736,40.4859021 32.1456044,41.3904158 L32.1456044,41.3904158 L32.1456044,41.3904158 Z" id="Path-2340" stroke="none" fill="#00BCD4" fill-rule="evenodd" sketch:type="MSShapeGroup"></path>
+                        <path d="M41.2329465,17.6385085 C43.0184755,17.1600775 44.3494219,15.9128892 46.325164,13.831368 C48.3009061,11.7498467 53.0942208,7.88285143 53.0942208,7.88285143 C53.0942208,7.88285143 47.1714833,6.93810294 44.2577874,6.11581338 C41.3440914,5.29352382 39.3878554,5.09252345 37.9728526,5.47167226 C34.3009725,6.4555494 33.1573457,10.3115109 33.8856983,13.0297598 C34.6140509,15.7480087 37.5036933,18.6377589 41.2329465,17.6385085 Z" id="Path-2" stroke="none" fill="#00BCD4" fill-rule="evenodd" sketch:type="MSShapeGroup" transform="translate(43.385989, 11.563964) scale(-1, 1) translate(-43.385989, -11.563964) "></path>
+                        <path d="M65.6142356,18.8886462 C65.6142356,18.8886462 59.2368771,20.8509103 55.8029149,18.8886462 C52.3689526,16.926382 51.8783865,13.9829858 53.3500847,16.926382" id="Path-3317" stroke="#FFFFFF" stroke-width="1" fill="none" sketch:type="MSShapeGroup"></path>
+                      </g>
                     </g>
+                  </g>
                 </g>
-            </svg>
+              </g>
+            </g>
+          </g>
+        </g>
+      </svg>
     </a>
   {{else}}
     <a class="brand-logo" href="/">{{getSetting "title" "Telescope"}}</a>
