--- a/packages/telescope-theme-stewardsof/lib/client/templates/posts/custom_posts_list_compact.html
+++ b/packages/telescope-theme-stewardsof/lib/client/templates/posts/custom_posts_list_compact.html
@@ -35,7 +35,7 @@ postsField (Object)
   {{/each}}
   </div>
 {{#if hasMorePosts}}
-  <a class="downvoted-more more-button grid-module" href="#"><span>{{_ "load_more"}}</span></a>
+  <a class="downvoted-more more-button grid-module btn waves" href="#" style="width: 100%;"><span>{{_ "load_more"}}</span></a>
 {{/if}}
 
 </template>
