--- a/packages/custom/lib/client/templates/custom_post_title.html
+++ b/packages/custom/lib/client/templates/custom_post_title.html
@@ -1,3 +1,3 @@
 <template name="custom_post_title">
-  <a href="{{postLink}}" class="post-title" target="{{postTarget}}">{{title}} {{randomEmoji}}</a>
+  <a href="{{this.getLink}}" class="post-title" target="{{this.getLinkTarget}}">{{title}}</a>
 </template>
