--- a/packages/telescope-pages/lib/client/templates/page_item.html
+++ b/packages/telescope-pages/lib/client/templates/page_item.html
@@ -1,6 +1,6 @@
 <template name="page_item">
   <div class="form-module">
-    {{> quickForm collection="Pages" id=formId type="update" doc=this label-class="control-label" input-col-class="controls" template="bootstrap-horizontal"}}
+    {{> quickForm collection="Pages" id=formId type="update" doc=this label-class="control-label" input-col-class="controls" template="materialize"}}
     <a href="#" class="delete-link">Delete</a>
   </div>
 </template>
