--- a/packages/telescope-theme-base/lib/client/scss/specific/_users.scss
+++ b/packages/telescope-theme-base/lib/client/scss/specific/_users.scss
@@ -73,3 +73,11 @@
     border: none;
   }
 }
+
+.user-profile-comments.tab-module {
+  .posts {
+    .post {
+      padding: 20px 30px 0px 20px;
+    }
+  }
+}
