--- a/packages/telescope-theme-stewardsof/lib/client/templates/nav/custom_notification_item.html
+++ b/packages/telescope-theme-stewardsof/lib/client/templates/nav/custom_notification_item.html
@@ -1,8 +1,8 @@
 <template name="custom_notification_item">
-  <li class="dropdown-item notification-item {{#if read}}read{{/if}}">
+  <div class="dropdown-item notification-item {{#if read}}read{{/if}}">
     <div class="notification-html">
       {{{notificationHTML}}}
     </div>
     <span class="notification-timestamp">{{timeAgo timestamp}}</span>
-  </li>
+  </div>
 </template>
