--- a/packages/telescope-theme-stewardsof/lib/client/templates/pages/custom_pages_menu.html
+++ b/packages/telescope-theme-stewardsof/lib/client/templates/pages/custom_pages_menu.html
@@ -5,7 +5,7 @@
       <div class="menu-menu">
         <ul class="menu-contents" role="menu" aria-labelledby="dLabel">
         {{#each pages}}
-          <li class="menu-items"><a href="{{pathFor route='page'}}">{{title}}</a></li>
+          <li class="menu-item"><a href="{{pathFor route='page'}}">{{title}}</a></li>
         {{/each}}
         </ul>
       </div>
